fix bug "jump" table rows

--- a/src/containers/instrumentsBox/instrumentBox.module.scss
+++ b/src/containers/instrumentsBox/instrumentBox.module.scss
@@ -4,7 +4,7 @@
 .table {
   width: 100%;
   border-spacing: 0;
-  margin-top: 20px;
+  margin: 20px 0;
   table-layout: fixed;
 }
 
