--- a/src/hoc/content/content.module.scss
+++ b/src/hoc/content/content.module.scss
@@ -1,7 +1,7 @@
 .content{
   margin-left: 203px;
   padding: 20px;
-  max-width: calc(100vw - 200px);
+  width: calc(100vw - 200px);
   overflow-x: hidden;
   box-shadow: -2px 0 10px #cacaca;
   min-height: 100vh;
